<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CountryActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_logo"
        android:src="@drawable/ic_flag"
        app:tint="@color/main_logo_background_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        android:text="@string/country_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/imageViewLogo"
        app:layout_constraintTop_toTopOf="@id/imageViewLogo"
        app:layout_constraintBottom_toBottomOf="@id/imageViewLogo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonBrunai"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_brunei"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_brunei" />

            <Button
                android:id="@+id/buttonCambodia"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_cambodia"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_cambodia" />

            <Button
                android:id="@+id/buttonEastTimor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_east_timor"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_east_timor" />

            <Button
                android:id="@+id/buttonIndonesia"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_indonesia"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_indonesia" />

            <Button
                android:id="@+id/buttonLaos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_laos"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_laos" />

            <Button
                android:id="@+id/buttonMalaysia"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_malaysia"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_malaysia" />

            <Button
                android:id="@+id/buttonMyanmar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_myanmar"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_myanmar" />

            <Button
                android:id="@+id/buttonPhilippines"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_philippines"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_philippines" />

            <Button
                android:id="@+id/buttonSingapore"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_singapore"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_singapore" />

            <Button
                android:id="@+id/buttonThailand"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_thailand"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_thailand" />

            <Button
                android:id="@+id/buttonVietnam"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/main_button_background_tint"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/country_normal_text_color"
                android:text="@string/country_vietnam"
                android:onClick="onClickButtonCountry"
                android:tag="@string/country_vietnam" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
