<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_logo"
        android:src="@drawable/ic_flag"
        app:tint="@color/main_logo_background_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        android:text="@string/main_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/imageViewLogo"
        app:layout_constraintTop_toTopOf="@id/imageViewLogo"
        app:layout_constraintBottom_toBottomOf="@id/imageViewLogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_input_country_label"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewSelectedCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/main_input_hint_text_color"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="@string/country_indonesia"/>

        <Button
            android:id="@+id/buttonCountry"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/main_button_background_tint"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/main_button_text_color"
            android:text="@string/main_input_country_hint"
            android:onClick="onClickButtonCountry" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
